--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     </div>
 
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
     <style>
       @keyframes spin {
