--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: calc(min(100vh, 100dvh));
             background: linear-gradient(to right, #e0f2f1, #ebf5ff);
           "
         >
@@ -97,6 +97,15 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
     <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+
       @keyframes spin {
         0% {
           transform: rotate(0deg);
