--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta
       name="description"
       content="Vendio is a premier eCommerce platform offering a wide range of products at unbeatable prices. Discover seamless shopping experiences and the best deals online."
@@ -13,6 +14,7 @@
       content="eCommerce, online shopping, discounts, products, Vendio"
     />
     <meta name="author" content="Dhruv Rajpoot" />
+
     <meta property="og:title" content="Vendio - Premier eCommerce Platform" />
     <meta
       property="og:description"
@@ -21,7 +23,20 @@
     <meta property="og:url" content="https://vendio.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Vendio" />
-    <title>Vendio - Premier eCommerce Platform</title>
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dp3kpqzce/image/upload/v1724084071/logo_scddl1.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:alt" content="Vendio logo" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google" content="nositelinkssearchbox" />
+
+    <link rel="canonical" href="https://vendio.vercel.app/" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -33,6 +48,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] =
@@ -48,10 +64,36 @@
       })(window, document, "clarity", "script", "noa5m89963");
     </script>
 
-    <meta name="robots" content="index, follow" />
-    <meta name="googlebot" content="index, follow" />
-  </head>
+    <title>Vendio - Premier eCommerce Platform</title>
 
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      @keyframes pulse {
+        0%,
+        100% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0.5;
+        }
+      }
+    </style>
+  </head>
   <body>
     <div id="root">
       <main>
@@ -95,35 +137,5 @@
 
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-      }
-
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-
-      @keyframes pulse {
-        0%,
-        100% {
-          opacity: 1;
-        }
-        50% {
-          opacity: 0.5;
-        }
-      }
-    </style>
   </body>
 </html>
