--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             justify-content: center;
             align-items: center;
             height: calc(min(100vh, 100dvh));
-            background: linear-gradient(to right, #e0f2f1, #ebf5ff);
+            background: white;
           "
         >
           <div
